--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
           </p>
 
           <aside class="notes">
-            <a target="_blank" href="https://onlinegdb.com/UT93MXTagn">Example</a>
+            <a target="_blank" href="https://onlinegdb.com/AmfvK-aqM">Example</a>
           </aside>
         </section>
 
@@ -746,7 +746,7 @@
               - initialise a counter <br />
               - condition to keep going <br />
               - increment counter <br />
-              <a target="_blank" href="https://onlinegdb.com/QKlu2GgQp" >Example</a>
+              <a target="_blank" href="https://onlinegdb.com/aJnRl3ofQ" >Example</a>
             </p>
             <p>
               for-each loop <br />
@@ -842,7 +842,7 @@
               switch-case may be more readable and concise <br> 
               than an if-statement
             </p>
-            <a target="_blank" href="https://onlinegdb.com/kB6ztzoIs">Example</a>
+            <a target="_blank" href="https://onlinegdb.com/SO7-Fg2ux">Example</a>
           </aside>
         </section>
 
@@ -980,7 +980,7 @@
             <p>But Java also allows us to define our own classes.</p>
             <p>A class is a combination of variables and methods.</p>
 
-            <a  target="_blank" href="https://onlinegdb.com/B38Qi2BqP">Example</a>
+            <a  target="_blank" href="https://onlinegdb.com/zobtRnG8a">Example</a>
           </aside>
         </section>
 
@@ -1011,7 +1011,7 @@
               and use them in your main program.
             </p>
 
-            <a target="_blank" href="https://onlinegdb.com/q0zEGCON6">Example2</a>
+            <a target="_blank" href="https://onlinegdb.com/oUmxLk0KW">Example2</a>
           </aside>
         </section>
 
