--- a/index.html
+++ b/index.html
@@ -1012,6 +1012,8 @@
             </p>
 
             <a target="_blank" href="https://onlinegdb.com/oUmxLk0KW">Example2</a>
+
+            <a target="_blank" href="https://onlinegdb.com/svFNKR7B5">Example3 (Game)</a>
           </aside>
         </section>
 
