--- a/index.html
+++ b/index.html
@@ -1012,8 +1012,8 @@
             </p>
 
             <a target="_blank" href="https://onlinegdb.com/oUmxLk0KW">Example2</a>
-
-            <a target="_blank" href="https://onlinegdb.com/svFNKR7B5">Example3 (Game)</a>
+            <br>A simple random game 
+            <a target="_blank" href="https://onlinegdb.com/v3NUvH1J9">Example3</a>
           </aside>
         </section>
 
